--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,24 @@
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" routerLink="">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/contact">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav my-2 my-lg-0">
+      <li class="nav-item active">User Login</li>
+      <li class="nav-item active">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </li>
+    </ul>
+  </div>
+  <div>
+    {{selectedSource?.name}}
+  </div>
+  <button class="btn btn-outline-success" type="submit" routerLink="/add">Add Article</button>
+
+  <select ngModel (ngModelChange)="selectSourceChangeHandler($event)">
+    <option *ngFor="let value of sources" [ngValue]="value">{{value.name}}</option>
+  </select>
+  <input [(ngModel)]="filterText" type="text" (ngModelChange)="onChangeHadler($event)" />`
+</nav>
