--- a/news-aggregator/src/app/components/add-news-item/add-news-item.component.scss
+++ b/news-aggregator/src/app/components/add-news-item/add-news-item.component.scss
@@ -1,4 +1,4 @@
-.editing-section {
+form {
     display: flex;
     justify-content: space-around;
     padding: 20px;
@@ -25,12 +25,16 @@
         min-height: 90px;
     }
 
+    .invalid {
+        border-color: red;
+    }
+
     .buttons {
         display: flex;
         justify-content: space-around;
         margin-top: 10px;
 
-        input[type=button] {
+        input {
             width: 80px;
         }
     }
