--- a/news-aggregator/src/app/components/main-view/main-view.component.html
+++ b/news-aggregator/src/app/components/main-view/main-view.component.html
@@ -1,6 +1,9 @@
 <app-news-filtering-panel></app-news-filtering-panel>
 <div>
-    <news-item *ngFor="let item of news" [newsItem]="item" [source]="source"></news-item>
+    <div class="news-container">
+        <div #container></div>
+    </div>
+    <div class="news-container">
+        <div (click)="loadMoreHandler()" class="load-more">Load More</div>
+    </div>
 </div>
-
-
